--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -7,5 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "secretKey": "qwertyuiopasdfghjklzxcvbnmqwertyuiop"
+  "secretKey": "qwertyuiopasdfghjklzxcvbnmqwertyuiop",
+  "bpmServerIp": "127.0.0.1",
+  "bpmPort": "1580",
+  "bpmServerUrl": "http://localhost:61139/API/StartBPM"
 }
