--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -29,4 +29,8 @@
     <ProjectReference Include="..\Tools\Tools.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Files\" />
+  </ItemGroup>
+
 </Project>
