--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -10,5 +10,6 @@
   "secretKey": "qwertyuiopasdfghjklzxcvbnmqwertyuiop",
   "bpmServerIp": "10.3.187.19",
   "bpmPort": "1580",
-  "bpmServerUrl": "http://localhost:61139/API/StartBPM"
+  "bpmServerUrl": "http://localhost:61139/API/StartBPM",
+  "approveServerUrl": "http://localhost:61139/API/approve"
 }
