杨泽霖在Service写入了查询成员角色和部门的方法

--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Context\Context.csproj" />
+    <ProjectReference Include="..\IRepository\IRepository.csproj" />
     <ProjectReference Include="..\IService\IService.csproj" />
   </ItemGroup>
 
